# ircsp_v1

./: COPYRIGHT  Makefile  Makefile.in  README.md  TODO  addhead  admin.db  autogen.sh  bans.db  boot.c  cadmin.db  channel.db  chanserv.c  check_chan.c  check_clones.c  check_gline.c  check_nick.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  count  extern.h  flags.h  gline.db  greet  handler.c  helpserv.c  levels.h  link_admin.c  link_bans.c  link_cadmin.c  link_channel.c  link_clones.c  link_gline.c  link_hosts.c  link_jupe.c  link_nick.c  (+55 more)
data/: admin.db  cadmin.db  channel.db  nick.db
help/helpserv/: credits  index  info
help/nickserv/: auth  drop  help  index  register
help/uworld/: auth  clearmode  deop  gline  help  index  join  kick  listadmin  listusers  mode  op  part  showcommands  uptime
help/w/: auth  index
