dnl Process this file with autoconf to produce a configure script.
VERSION=5.1
PACKAGE=ircsp
AC_INIT(srv.spec)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/time.h unistd.h)
AC_CHECK_HEADERS(math.h stdio.h stdlib.h stdarg.h)
AC_CHECK_HEADERS(string.h signal.h sys/types.h)
AC_CHECK_HEADERS(sys/socket.h sys/time.h sys/wait.h)
AC_CHECK_HEADERS(netinet/in.h arpa/inet.h errno.h)
AC_CHECK_HEADERS(netdb.h ctype.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(select)
AC_CHECK_FUNCS(socket)
AC_CHECK_FUNCS(getcwd)
AC_CHECK_FUNCS(mkdir)
AC_CHECK_FUNCS(snprintf)
AC_CHECK_FUNCS(strcasecmp)
AC_CHECK_FUNCS(crypt)
AC_CHECK_FUNCS(socket)

AC_CHECK_LIB(Bedroom,lots_of_cute_chicks)
AC_CHECK_LIB(Bedroom,lots_of_hot_chicks, , [
echo "Warning: No chicks were found in your bedroom."
echo "  We highly suggest that you rectify this situation immediately."
])


AC_OUTPUT(Makefile)
